--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <h3>AI Ping pong game</h3>
           <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Instruction</button></div>
           <br><br>
-          <button class="btn btn-success" onclick="start()">Start</button>
+          <button class="btn btn-success" onclick="startGame()">Start</button>
           <h3 class="btn btn-danger" id="status"></h3>
 
           <button onclick="restart()" class="btn btn-danger" id="restart">Restart</button>
